Chapter9/02-envoy-dummy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: envoydummy
  labels:
    name: envoydummy
    service: envoydummy
  namespace: chapter11-temp
spec:
  ports:
    # the port that this service should serve on
  - port: 80
    targetPort: 10000
  selector:
    name: envoydummy
---
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-dummy-2
  namespace: chapter11-temp
data:
  envoy-config-2.yaml: |-
    static_resources:
      listeners:
      - name: listener_http
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 10000
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: chapter3-1_service
              route_config:
                name: my_first_route_to_nowhere
                virtual_hosts:
                - name: dummy
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    direct_response:
                      status: 200
                      body:
                        inline_string: "V2----------Bootstrap Service Mesh Implementation with Istio----------V2"
              http_filters:
              - name: envoy.filters.http.wasm
                typed_config:
                  "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                  type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                  value:
                    config:
                      vm_config:
                        runtime: "envoy.wasm.runtime.v8"
                        code:
                          local:
                            filename: "/wasm2/main.wasm"
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoydummy-2
  namespace: chapter11-temp
spec:
  replicas: 1
  selector:
    matchLabels:
      name: envoydummy
      version: v2
  template:
    metadata:
      labels:
        name: envoydummy
        version: v2
    spec:
      containers:
      - name: envoyproxy
        image: envoyproxy/envoy:v1.22.2 
        args: ["-c","/tmp/envoy-config-2.yaml"]
        ports:
        - containerPort: 10000
        volumeMounts:
        - name: envoy-dummy-cfg
          mountPath: /tmp
        - name: add-header-wasm
          mountPath: /wasm2
      volumes:
      - name: envoy-dummy-cfg
        configMap:
          name: envoy-dummy-2

      - name: add-header-wasm
        configMap:
          name: 01-wasm
---
